# innovativeproject-pm-generator

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.yml
apps/airflow/dags/: README.md  dataset_visualization_spark_dag.py  generate_spark_dag.py  preprocessing_pipeline.py  preprocessing_spark_dag.py  test_dag.py  test_spark_dag.py
apps/airflow/dags/lib/: __init__.py  spark_config.py  spark_dag.py  spark_submit.py
apps/backend/: pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/v1/: airflow.py  dags.py  generation.py  modeling.py  pipeline.py  s3.py
apps/backend/app/core/: auth.py  base_service.py  config.py  error_handlers.py  logging.py  storage_access.py
apps/backend/app/db/: schemas.py
apps/backend/app/integrations/airflow/: __init__.py  auth.py  client.py  config.py  errors.py  mapper.py  runtime.py
apps/backend/app/models/: auth.py  dags.py  modeling.py  pipeline.py  s3.py  spark_jobs.py
apps/backend/app/services/: airflow.py  generation.py  pipeline.py  s3.py  spark_dag_conf.py
apps/backend/app/services/airflow/: auth.py  client.py  config.py  errors.py  mapper.py  runtime.py  service.py
apps/backend/app/services/llm/: autofill.py
apps/backend/app/services/preprocessing/: __init__.py  conf.py
apps/backend/app/services/runs/: poller.py
apps/backend/app/services/s3/: pm_schema.py  service.py  visualization.py  visualization_artifacts.py
apps/backend/tests/: test_spark_jobs_contract.py
apps/frontend/: index.html  package-lock.json  package.json  pm_schema_columns.json  vite.config.js
apps/frontend/src/: App.vue  main.js
apps/frontend/src/assets/: S3.css  global.css  tailwind.css
apps/generator/: pyproject.toml
apps/generator/EDA/: EDA_everything.ipynb  EDA_template.ipynb  eda_utils.py
apps/generator/apps/: dataset_visualization_spark_job.py  preprocessing_spark_job.py  run_data_similarity.py  run_generation.py  run_preprocessing.py  run_preprocessing_job.py  run_visualization.py  test_spark_job.py
apps/generator/feature_engineering/: calendar_features.py  fe_simple.ipynb
apps/generator/genpm/data_similarity/: __main__.py  configs.py  data_similarity.ipynb  data_similarity_utils.py  run.py  test_ls.py
apps/generator/genpm/modelling/: README_modelling.md  __main__.py  configs.py  defaults.py  generate.py  generate_s3.py  run.py  train.py  validation.py
apps/generator/genpm/modelling/core/: ARCHITECTURES_HISTORY.md  VAE_ARCHITECTURE_HISTORY.md  architectures.py  artifacts.py  data.py  diffusion.py  gan.py  generation.py  model.py  training.py
apps/generator/genpm/modelling/dataset_prep/: dataset_prep.py
apps/generator/genpm/modelling/model_tests/: generate.ipynb  metrics_comparison.ipynb  nb.ipynb  nb2.ipynb  nb3.ipynb  run_metrics_checks.ipynb  run_visual_checks.ipynb  train.ipynb
apps/generator/genpm/modelling/model_utils/: artifacts.py  cvae_utils.py  data.py  generation.py  model.py  training.py
apps/generator/genpm/preprocessing/: __main__.py  changepoint_detection.py  configs.py  defaults.py  kpi_coverage.py  metadata.py  preprocessing_config.yaml.example  preprocessing_logic.py  run.py  scaling.py
apps/generator/genpm/preprocessing/logic/: changepoint_detection.py  group_kpis_based_on_agg_character.py  imputing.py  kpi_coverage.py  kpi_grouping_defs.py  preprocessing_logic.py  scaling.py  simple_logic.py
apps/generator/genpm/raw_vis/: __init__.py  __main__.py  configs.py  data_vis_utils.py  data_visualisation.py  dataset_job.py  kpi_stats.py  pm_schema.py  s3_layout.py
apps/generator/genpm/utils/: consts.py  logger.py  s3_io.py  s3_paths.py  spark_bootstrap.py  spark_session.py  utils.py
apps/generator/modelling/: cvae_utils.py  cvae_utils2.py  generate.ipynb  generate.py  model_utils.py  modelling_simple.ipynb  nb.ipynb  nb2.ipynb  nb3.ipynb  nbpy2.py  run_utils.py  train.ipynb
apps/generator/notebooks/: data_raw_transform.ipynb  data_vis_utils.py  data_visualisation.py  kpi_distribution_utils.py  kpi_distributions.ipynb  personal_nb.ipynb  seasonality.ipynb  show_windows.ipynb  test_visualizations.ipynb
apps/generator/notebooks/eda/: EDA_everything.ipynb  eda_utils.py
apps/generator/notebooks/kpi_distribution/: kpi_distribution_utils.py  kpi_distributions.ipynb
apps/generator/preprocessing/: imputing.py  preprocessing_config.yaml.example  raw_transform.py  scaling.py
apps/generator/raw_vis/: data_vis_utils.py  data_visualisation.py
apps/generator/scripts/: data_similarity.ipynb  fake_timeseries.py  run_data_similarity.py  run_diffusion_training.py  run_gan_training.py  run_generation.py  run_memorization_check.py  run_preprocessing.py  run_raw_vis.py  run_training.py
apps/generator/tests/preprocessing/: conftest.py  test_configs.py  test_kpi_coverage_pure.py  test_spark_simple.py
apps/generator/transform/: raw_transform.py
apps/generator/utils/: __init__.py  consts.py  logger.py  utils.py
apps/spark/: pyproject.toml
backend/: pyproject.toml
backend/app/db/: database.py
backend/app/models/: generation.py
docs/architecture/: dag-management.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: global.css
frontend/src/components/: DataTable.vue  SideBar.vue  ToggleButton.vue
infra/: airflow-docker-compose.yml  docker-compose.yml
infra/keycloak/: realm-export.json
notebooks/: EDA_template.ipynb
scripts/: test_pm_schema_sync.py  upload_mock_pm_kpi.py
shared/: pm_schema_columns.json
tools/.devcontainer/: devcontainer.json  docker-compose.yml
(+80 files in other folders)
