[project]
name = "genpm"
version = "0.1.0"
description = "GenPM monorepo workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/backend",
    "apps/spark"
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
