[project]
name = "genpm"
version = "0.0.1"
description = "GenPM monorepo workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false
default-groups = ["spark","backend", "dev"]

[tool.uv.workspace]
members = [
    "apps/backend",
    "apps/spark"
]

[tool.uv.sources]
genpm-spark = { workspace = true }
genpm-backend = { workspace = true }


[dependency-groups]
dev = ["ruff>=0.15.10"]
spark = ["genpm-spark"]
backend = ["genpm-backend"]