[project]
name = "genpm"
version = "0.0.1"
description = "GenPM monorepo workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false
default-groups = ["generator","backend", "dev"]

[tool.uv.workspace]
members = [
    "apps/backend",
    "apps/generator"
]

[tool.uv.sources]
genpm-generator = { workspace = true }
genpm-backend = { workspace = true }


[dependency-groups]
dev = ["ruff>=0.15.10"]
generator = ["genpm-generator"]
backend = ["genpm-backend"]
