[project]
name = "genpm-backend"
version = "0.1.0"
description = "FastAPI BE for GenPM"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.116.1",
    "pyjwt[crypto]>=2.10.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "boto3==1.43.1",
    "botocore==1.43.1",
    "pydantic-settings>=2.14.1",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "sse-starlette>=2.1.3",
    "joblib>=1.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_typed = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
files = ["app"]
