[project]
name = "genpm-generator"
version = "0.1.0"
description = "Data pipeline processing for GenPM"
requires-python = ">=3.11"
dependencies = [
    "findspark>=2.0.1",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "pyspark>=4.1.1",
    "jupyter",
    "plotly>=6.7.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]
