[project]
name = "genpm-generator"
version = "0.1.0"
description = "Data pipeline processing for GenPM"
requires-python = ">=3.11,<3.12"
dependencies = [
    "findspark>=2.0.1",
    "ipykernel>=7.2.0",
    "jupyter",
    "matplotlib>=3.10,<3.11",
    "plotly>=6.0,<7.0",
    "polars>=1.39,<2.0",
    "pre-commit>=4.5,<5.0",
    "pyarrow>=18,<19",
    "pyspark>=3.5,<4.0",
    "numpy>=1.26,<2.1",
    "pandas>=2.2,<2.3",
    "scipy>=1.13,<1.15",
    "statsmodels>=0.14.3,<0.15",
    "tsgm[torch]==0.1.0",
    "optuna==4.9.0",
    "dotenv>=0.9.9",
    "ruptures>=1.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["genpm"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E203", "E501"]
